fixed css selector not applying on safari

--- a/src/views/Main/Browser/ImageDetails/ImageDetails.css
+++ b/src/views/Main/Browser/ImageDetails/ImageDetails.css
@@ -3,6 +3,23 @@
     border-radius: 15px;
     position: relative;
     overflow: visible;
+
+    & > .prev-button {
+      background-color: grey;
+      border-radius: 50%;
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateX(-50%) rotate(180deg);
+    }
+    & > .next-button {
+      background-color: grey;
+      border-radius: 50%;
+      position: absolute;
+      right: 0;
+      top: 50%;
+      transform: translateX(50%);
+    }
   }
 
   & .title-area {
@@ -68,21 +85,5 @@
         }
       }
     }
-  }
-  .prev-button {
-    background-color: grey;
-    border-radius: 50%;
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateX(-50%) rotate(180deg);
-  }
-  .next-button {
-    background-color: grey;
-    border-radius: 50%;
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateX(50%);
   }
 }
